--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -24,7 +24,7 @@
                     <a href="{% url 'create_page' %}">Create New Page</a>
                 </div>
                 <div>
-                    Random Page
+                    <a href="{% url 'found_page' %}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
