--- a/encyclopedia/templates/encyclopedia/page.html
+++ b/encyclopedia/templates/encyclopedia/page.html
@@ -5,5 +5,9 @@
 {% endblock %}
 
 {% block body %}
+    <form action="{% url 'page' title %}" method="post">
+        {% csrf_token%}
+        <button type="submit">Edit page</button>
+    </form>
     {{content | safe}}
 {% endblock %}
