--- a/encyclopedia/templates/encyclopedia/page.html
+++ b/encyclopedia/templates/encyclopedia/page.html
@@ -7,7 +7,7 @@
 {% block body %}
     <form action="{% url 'page' title %}" method="post">
         {% csrf_token%}
-        <button type="submit">Edit page</button>
+        <button type="submit" class="btn btn-primary mb-2">Edit page</button>
     </form>
     {{content | safe}}
 {% endblock %}
